--- a/index.html
+++ b/index.html
@@ -32,6 +32,9 @@
 		<div class="square"></div>
 	</div>
 	
+	<div class="footer">
+		<p>&copy; Created by Cassie W. with Colt S.</p>
+	</div>
 <script type="text/javascript" src="color.js"></script>
 </body>
 </html>
